--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-async-script": "^1.2.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "react-markdown": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
